@@ -35,7 +35,7 @@ __copyright__ = "Copyright 2005, 2006, 2007 Canonical Ltd."
 # Python version 2.0 is (2, 0, 0, 'final', 0)."  Additionally we use a
 # releaselevel of 'dev' for unreleased under-development code.
 
-version_info = (0, 90, 0, 'dev', 0)
+version_info = (0, 91, 0, 'dev', 0)
 
 # API compatibility version: bzrlib is currently API compatible with 0.18.
 api_minimum_version = (0, 18, 0)
