@@ -1,5 +1,14 @@
 IN DEVELOPMENT
 
+  CHANGES:
+
+   * The default branch and repository format has changed to 
+     ``dirstate-tags``, so tag commands are active by default.
+     This format is compatible with Bazaar 0.15 and later.
+     (Martin Pool)
+
+IN DEVELOPMENT
+
   BUGFIXES:
 
     * ``bzr init`` should connect to the remote location one time only.  We
